--- a/src/resources/elements/my-map/my-map.html
+++ b/src/resources/elements/my-map/my-map.html
@@ -2,7 +2,7 @@
     <require from="./my-map.css">
 
     </require>
-    <div id="mapa" style="margin-left:auto;margin-right:auto;width:500px;height:500px">
+    <div id="mapa" css="margin-left:auto;margin-right:auto;width:${width}px;height:${height}px">
         <input
                 id="pac-input"
                 class="controls"
