--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -174,6 +174,7 @@
                     hide_label_if_no_date.bind="true"
                     span_size.bind="photo_info.photo_date_datespan">
                 </date-range>
+                <span if.bind="topic_names" style="margin-top:-8px;">${'photos.keywords' & t}: ${topic_names}</span>
             </span>
             <span if.bind="user.editing" class="full-size-photo-info ${theme.rtltr}"
                 css="width:${Math.max(slide[slide.side].width)}px;font-size:130%;color:yellow;width:800px;">
