--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -39,7 +39,7 @@
                             <th>${'groups.contacts' & t}</th>
                         </tr>
                     </thead>
-                    <tbody style="height:600px;overflow:auto;" id="">
+                    <tbody style="overflow:auto;" id="">
                         <tr repeat.for="item of $displayData">
                             <td>${item.id}</td>
                             <td>${item.title}</td>
