--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -75,7 +75,7 @@
                         <div if.bind="status_record.photo_uploaded" style="width:242px;">
                             <button class="btn btn-basic" if.bind="user.editing || status_record.has_location"
                                 click.delegate="expose_map($event)"
-                                style="margin-top:8px;margin-bottom:6px;border:solid 2px lightgray;width:100%;">
+                                style="margin-top:8px;margin-bottom:6px;border:solid 2px lightgray;width:238px;">
                                 <i class="fa fa-map-marker-alt" style="color:dodgerblue"></i> ${view_hide_map}
                             </button>
                             <div style="margin-top: 0px;margin-bottom:2px;">
